--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,19 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.6.0.Final</version>
 		</dependency>
+
+		<!-- Spring Boot Starter Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!-- OAuth2 Resource Server Starter (incluye soporte JWT) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
