--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>8.0.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
