--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ target/
 *.iws
 *.iml
 *.ipr
+/src/main/resources/firebase-service-account.json
 
 ### NetBeans ###
 /nbproject/private/
@@ -30,6 +31,5 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
 .vscode/
 /src/main/resources/firebase-service-account.json
