--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,14 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>8.0.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.17.1</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
