--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 # H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.main.allow-bean-definition-overriding=true
