--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,1 @@
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://tutorlink.cbs0cyquwz0x.us-east-1.rds.amazonaws.com:3306/tutorlink?useSSL=false&serverTimezone=UTC
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=admin
-spring.datasource.password=tutor123456
-
-# Hibernate and JPA configurations
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.port=8080
-
-# Logging levels for Hibernate SQL statements and binding parameters for debugging
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
-
-spring.main.allow-bean-definition-overriding=true
+#acá completar con el application properties pasado por wp
