update reservation & add send reservation mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,15 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 spring.main.allow-bean-definition-overriding=true
+
+# Email server configuration
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=reservas.tutorlink@gmail.com
+mail.password=tucaminoalexito
+mail.properties.mail.smtp.auth=true
+mail.properties.mail.smtp.starttls.enable=true
+mail.properties.mail.smtp.starttls.required=true
+
+# Correo electrónico para pruebas con Resend
+resend.test.email=rodrigofaure@gmail.com
