--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.datasource.password=tutor123456
 # Hibernate and JPA configurations
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
@@ -27,5 +26,5 @@ mail.properties.mail.smtp.auth=true
 mail.properties.mail.smtp.starttls.enable=true
 mail.properties.mail.smtp.starttls.required=true
 
-# Correo electrónico para pruebas con Resend
-resend.test.email=rodrigofaure@gmail.com
+# Correo electrÃ³nico para pruebas con Resend
+resend.test.email=manuel.herrera.m@gmail.com
