adds firebase to dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ mail.properties.mail.smtp.auth=true
 mail.properties.mail.smtp.starttls.enable=true
 mail.properties.mail.smtp.starttls.required=true
 
-# Correo electrónico para pruebas con Resend
+# Correo electronico para pruebas con Resend
 resend.test.email=manuel.herrera.m@gmail.com
