--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,31 @@
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://tutorlink.cbs0cyquwz0x.us-east-1.rds.amazonaws.com:3306/tutorlink?useSSL=false&serverTimezone=UTC
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=admin
-spring.datasource.password=tutor123456
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.driverClassName=${MYSQL_DRIVER:com.mysql.cj.jdbc.Driver}
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 # Hibernate and JPA configurations
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.port=8080
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQL8Dialect}
+server.port=${SERVER_PORT:8080}
 
 # Logging levels for Hibernate SQL statements and binding parameters for debugging
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.level.org.hibernate.SQL=${HIBERNATE_SQL_LOGGING_LEVEL:debug}
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=${HIBERNATE_BINDING_LOGGING_LEVEL:trace}
 
-spring.main.allow-bean-definition-overriding=true
+spring.main.allow-bean-definition-overriding=${ALLOW_BEAN_DEFINITION_OVERRIDING:true}
 
 # Email server configuration
-mail.host=smtp.gmail.com
-mail.port=587
-mail.username=reservas.tutorlink@gmail.com
-mail.password=tucaminoalexito
-mail.properties.mail.smtp.auth=true
-mail.properties.mail.smtp.starttls.enable=true
-mail.properties.mail.smtp.starttls.required=true
+mail.host=${MAIL_HOST:smtp.gmail.com}
+mail.port=${MAIL_PORT:587}
+mail.username=${MAIL_USERNAME}
+mail.password=${MAIL_PASSWORD}
+mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH:true}
+mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS_ENABLE:true}
+mail.properties.mail.smtp.starttls.required=${MAIL_SMTP_STARTTLS_REQUIRED:true}
 
-# Correo electrónico para pruebas con Resend
-resend.test.email=manuel.herrera.m@gmail.com
+# Correo electronico para pruebas con Resend
+resend.test.email=${RESEND_TEST_EMAIL:user@mail.com}
+
